Fix mobile alignment bug for menu

--- a/public/css/erynandriley.css
+++ b/public/css/erynandriley.css
@@ -64,7 +64,7 @@ nav.menu {
 
 nav ul {
   list-style-type: none;
-  margin: 0;
+  margin: 0 auto;
   padding: 0;
   overflow: hidden; /* clearfix */
 }
